# msp430-emulator

./: .gitignore  CMakeLists.txt  lines.sh
data/: complex.out  malformed.out  simple.out
include/: types.h
include/dev/asm/: instruction.h
include/dev/cpu/: cpu.h  decode.h  execute.h  register.h
include/dev/cpu/execute/: add.h
include/dev/mem/: mem.h  memory_map.h
include/dev/model/: msp430fr5994.h  package.h
include/dev/peripheral/: tinyram.h
include/dev/peripheral/adc/: signals.h
include/dev/peripheral/tinyram/: tinyram.h
include/prog/: bin.h  elf.h
include/prog/isa/: format_address.h  format_calla.h  format_i.h  format_ii.h  format_jump.h  format_pushm_popm.h  format_rxxm.h  instruction.h  instruction_fwd.h  instructions.h  utils.h  visitor.h
lib/: elf.h
src/: CMakeLists.txt  main.cpp
src/dev/: CMakeLists.txt
src/dev/cpu/: CMakeLists.txt  cpu.cpp  decode.cpp  execute.cpp  register.cpp
src/dev/cpu/execute/: add.cpp
src/dev/mem/: CMakeLists.txt  mem.cpp  memory_map.cpp
src/dev/model/: CMakeLists.txt  msp430fr5994.cpp  package.cpp
src/dev/peripheral/: CMakeLists.txt  tinyram.cpp
src/prog/: CMakeLists.txt  bin.cpp  elf.cpp
src/prog/isa/: format_address.cpp  format_calla.cpp  format_i.cpp  format_ii.cpp  format_jump.cpp  format_pushm_popm.cpp  format_rxxm.cpp  instruction.cpp  instruction_formats.cpp  instruction_utils.cpp
test/: CMakeLists.txt  main.cpp  test_utils.h
test/dev/: CMakeLists.txt
test/dev/cpu/: CMakeLists.txt  register_test.cpp
test/dev/mem/: CMakeLists.txt  memory_map_test.cpp  memory_map_test.h
test/integration/: CMakeLists.txt  pipeline_test.cpp
test/prog/: elf_test.cpp
test/unit/: CMakeLists.txt
test/unit/dev/: CMakeLists.txt
test/unit/dev/cpu/: CMakeLists.txt  cpu_test.cpp  decode_test.cpp  execute_test.cpp  register_test.cpp
test/unit/dev/mem/: CMakeLists.txt  mem_test.cpp
test/unit/dev/peripheral/: CMakeLists.txt  tinyram.cpp
test/unit/prog/: CMakeLists.txt  elf_test.cpp
test/util/: cpu_test_utils.h  mem_test_utils.h  package_test_utils.h  pipeline_test_utils.h
